modules/terraform/aws/loadbalancer/alb_listener_rules/host_header/main.tf
resource "aws_alb_listener_rule" "main" {
  count = var.is_hostheader  ? var.host_header_listener_count : 0
  listener_arn = element(concat(var.http_listener_arn, [""]), 0)
  action {
    type             = "forward"
    target_group_arn = element(concat(var.tg_arn, [""]), 0)
  }
  condition {
    field  = "host-header"
    values = formatlist("%s",var.host_header_listener_rules[count.index])
  }
}
